python/testData/quickFixes/PyTypeHintsQuickFixTest/multipleElementListInTupleAsTypingMemberParameter.py
from typing import Callable

foo2: Callable[[int], <error descr="Parameters to generic types must be types">[int,<caret> str]</error>] = None